hphp/test/zend/bad/tests-classes/inheritance_003.php
<?php

class A
{
	function f($x) {}
}

class B extends A
{
	function f() {}
}

?>
===DONE===